# library-management-api/swagger.json
@@ -29,24 +29,30 @@
     "http",
     "https"
   ],
+  "securityDefinitions": {
+    "bearerAuth": {
+      "type": "http",
+      "scheme": "bearer",
+      "bearerFormat": "JWT",
+      "description": "JWT Authorization header using the Bearer scheme. Example: 'Authorization: Bearer {token}'"
+    },
+    "githubAuth": {
+      "type": "oauth2",
+      "authorizationUrl": "https://github.com/login/oauth/authorize",
+      "tokenUrl": "https://github.com/login/oauth/access_token",
+      "flow": "authorizationCode",
+      "scopes": {
+        "user:email": "Access user email",
+        "read:user": "Read user profile"
+      },
+      "description": "GitHub OAuth 2.0 authentication"
+    }
+  },
   "consumes": [
     "application/json"
   ],
   "produces": [
     "application/json"
-  ],
-  "securityDefinitions": {
-    "BearerAuth": {
-      "type": "apiKey",
-      "name": "Authorization",
-      "in": "header",
-      "description": "JWT Authorization header using the Bearer scheme. Example: \"Authorization: Bearer {token}\""
-    }
-  },
-  "security": [
-    {
-      "BearerAuth": []
-    }
   ],
   "paths": {
     "/": {
@@ -64,10 +70,14 @@
         "description": "",
         "parameters": [
           {
-            "$ref": "#/parameters/page"
+            "name": "page",
+            "in": "query",
+            "type": "string"
           },
           {
-            "$ref": "#/parameters/limit"
+            "name": "limit",
+            "in": "query",
+            "type": "string"
           },
           {
             "name": "genre",
@@ -99,17 +109,25 @@
       },
       "post": {
         "description": "",
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/Book"
+              "type": "object",
+              "properties": {
+                "availableCopies": {
+                  "example": "any"
+                },
+                "totalCopies": {
+                  "example": "any"
+                }
+              }
             }
           }
         ],
@@ -175,11 +193,6 @@
       },
       "put": {
         "description": "",
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
         "parameters": [
           {
             "name": "id",
@@ -188,10 +201,23 @@
             "type": "string"
           },
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/Book"
+              "type": "object",
+              "properties": {
+                "availableCopies": {
+                  "example": "any"
+                },
+                "totalCopies": {
+                  "example": "any"
+                }
+              }
             }
           }
         ],
@@ -215,16 +241,16 @@
       },
       "delete": {
         "description": "",
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
             "type": "string"
           }
         ],
@@ -249,10 +275,14 @@
         "description": "",
         "parameters": [
           {
-            "$ref": "#/parameters/page"
+            "name": "page",
+            "in": "query",
+            "type": "string"
           },
           {
-            "$ref": "#/parameters/limit"
+            "name": "limit",
+            "in": "query",
+            "type": "string"
           },
           {
             "name": "membershipType",
@@ -279,18 +309,11 @@
       },
       "post": {
         "description": "",
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
         "parameters": [
           {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/Member"
-            }
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -334,11 +357,6 @@
       },
       "put": {
         "description": "",
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
         "parameters": [
           {
             "name": "id",
@@ -347,11 +365,9 @@
             "type": "string"
           },
           {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/Member"
-            }
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
@@ -374,16 +390,16 @@
       },
       "delete": {
         "description": "",
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
             "type": "string"
           }
         ],
@@ -409,11 +425,6 @@
     "/members/{memberId}/borrow/{bookId}": {
       "post": {
         "description": "",
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
         "parameters": [
           {
             "name": "memberId",
@@ -425,6 +436,11 @@
             "name": "bookId",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
             "type": "string"
           }
         ],
@@ -450,11 +466,6 @@
     "/members/{memberId}/return/{bookId}": {
       "post": {
         "description": "",
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
         "parameters": [
           {
             "name": "memberId",
@@ -466,6 +477,11 @@
             "name": "bookId",
             "in": "path",
             "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
             "type": "string"
           }
         ],
@@ -566,6 +582,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -576,6 +595,42 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/github": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/github/callback": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/profile": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -723,6 +778,11 @@
       }
     }
   },
+  "security": [
+    {
+      "bearerAuth": []
+    }
+  ],
   "parameters": {
     "page": {
       "name": "page",
